<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SendImageActivity">

    <Button
        android:id="@+id/buttonSendImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="@color/colorPrimary"
        android:contentDescription="@string/string_description_button_photo"
        android:text="@string/StringButtonSend"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageview5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/camera"
            tools:ignore="ContentDescription"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/transparent_white"
                android:contentDescription="@string/String_tag_image"
                android:outlineAmbientShadowColor="@color/transparent_black2"
                android:outlineSpotShadowColor="@color/transparent_black2"
                android:textColorHint="@color/white"
                app:boxBackgroundColor="@color/transparent_white2"
                app:boxStrokeColor="@color/transparent_white2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/imageTagSend"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:backgroundTint="@color/white"
                    android:contentDescription="@string/String_tag_image"
                    android:hint="@string/String_tag_image"
                    android:outlineAmbientShadowColor="@color/transparent_black2"
                    android:outlineSpotShadowColor="@color/transparent_black2"
                    android:shadowColor="@color/transparent_black2"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/buttonPhoto2"
                style="@android:style/ButtonBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="3"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/string_description_take_photo"
                app:srcCompat="@drawable/ic_camera_alt_black_24dp" />
        </LinearLayout>

        <ImageView
            android:focusable="true"
            android:id="@+id/imageViewSend"
            android:layout_width="200sp"
            android:layout_height="300sp"
            android:layout_gravity="center|center_vertical"
            android:layout_marginTop="20sp"
            android:contentDescription="@string/string_description_photo"
            android:elevation="25dp"
            app:srcCompat="@color/white" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:visibility="visible" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>