<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout9"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/woodsurface"
            tools:ignore="ContentDescription"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout9">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/transparent_white"
            android:outlineAmbientShadowColor="@color/transparent_black2"
            android:outlineSpotShadowColor="@color/transparent_black2"
            android:textColorHint="@color/white"
            app:boxBackgroundColor="@color/transparent_white2"
            app:boxStrokeColor="@color/transparent_white2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/imageTag"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:contentDescription="@string/string_hintText"
                android:hint="@string/string_search_photos"
                android:outlineAmbientShadowColor="@color/transparent_black2"
                android:outlineSpotShadowColor="@color/transparent_black2"
                android:shadowColor="@color/transparent_black2"
                android:textColor="@color/white" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/buttonPhoto"
            style="@android:style/ButtonBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:layout_weight="3"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/string_description_send_photo"
            app:srcCompat="@drawable/ic_camera_alt_black_24dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>